# pathfinder

./: .gitignore  README.md  pyproject.toml
data/: scene.xml
src/: auto_sim.py  core.py  demo.py  mujoco_sim.py  pipeline.py  planner.py  simulator.py  vision.py
tests/: test_pipeline.py  test_planner.py  test_vision.py
